  should be easily searched for via a web search.

* Fix a bug in unicode_to_xml() where xmlcharrefs created when a unicode
  string is turned into a byte string with an encoding that doesn't have 
  all of the needed characters had their ampersands ("&") escaped.
* Fix a bug in NewGNUTranslations.lngettext() if a fallback gettext object is
  used and the message is not in any catalog.

-----
1.1.1
-----

* Fix a bug with easy_gettext_setup() and get_translation_object() when using
  the default value of localedirs.

-----
1.1.0
-----

* Add yum.i18n.exception2msg section to the porting docs
* Deprecate BYTE_EXCEPTION_CONVERTERS as simplification of code lets
  us use EXCEPTION_CONVERTERS for both exception_to_unicode and
  exception_to_bytes.
* kitchen.i18n.get_translation_object
  - Add more parameters to :func:`~kitchen.i18n.get_translation_object` so it
    can more easily be used as a replacement for :func:`gettext.translation`.
  - Change the way we use localedirs.  We cycle through them until we find a
    suitable locale file rather than simply cycling through until we find a
    directory that exists.
  - When multiple message catalogs are found in localedirs (and via environment
    variables), set up the extra ones as fallbacks if the message isn't found
    in the first catalog.
* Change the return values from gettext and lgettext family of functions.
  Instead of simply guaranteeing a byte str will be returned we now guarantee
  the byte str will be valid in a certain encoding (the str may still be
  mangled but it will be valid).
* Updated subprocess and base64 modules from latest python-2.7 branch.
* Fix i18n Translation objects to set input_charset and output_charset on any
  fallback objects.
* Fix kitchen.i18n Translation objects' output_encoding() method on python-2.3.
  It was accessing a different self object than we wanted it to.  Defining it
  in a different way makes it work on python-2.3.

-----
1.0.0
-----
